# DollHouse

./: .gitignore  .gitmodules  CMakeLists.txt  DollHouse.ino  dollHouseButtons.cpp  dollHouseButtons.hpp  dollHouseStatemachine.cpp  dollHouseStatemachine.hpp  slowPulseGenerator.hpp
Documents/: boards.txt
colors/: CMakeLists.txt  colorCustom.hpp  colorCustomFixed.hpp  colorRgbw.cpp  colorRgbw.hpp  sevenSegmentRgb.cpp  sevenSegmentRgb.hpp
tests/: CMakeLists.txt  main.cpp  testButtonTimeMultiple.cpp  testColorsCustom.cpp  testDollHouseStatemachine.cpp  testImplicitIndexing.cpp
